@@ -1,6 +1,8 @@
 * 2007-11-12 - thorben.betten@open-xchange.com
 
  - Bugfix #10121: Keep AJP connection alive on thrown error
+ - Bugfix #10053: Forces to use base64 as 'Content-Tranfer-Encoding' header
+   to ensure data is kept as it is.
 
 * 2007-11-12 - martin.kauss@open-xchange.com
 
